# aalam-juice-center

./: AgentCard.json  README.md  docker-compose.yml  system_prompt  toolset.py
main/: frontend.py  frontend2.py
main/agent-gateway/router/src/: main.py
main/agent-gateway/router/src/config/: settings.py
main/agent-gateway/router/src/core/: agent_registry.py  routing_engine.py  session_history.py  vector_store.py
main/agents/agent - docx/: AgentCard.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml  req_docx.json
main/agents/agent - docx/outputs/: Appreciation_of_Turtles_Report.docx  Exponential_Functions_Report.docx  IIT_Delhi_Report.docx  Turtles.docx  Turtles_Comprehensive_Report.docx
main/agents/agent - docx/src/: __main__.py  agent.py  compliance_toolset.py  docx_toolset.py  executer.py  gemini_agent.py  gemini_agent_executor.py  input.json  models.py  openai_agent.py  openai_agent_executor.py  parser.py  policy_agent.py  tools.py
main/agents/agent - pptx/: AgentCard.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
main/agents/agent - pptx/outputs/: History_of_IIT_Delhi.pptx  Turtles_Introduction.pptx
main/agents/agent - pptx/src/: __main__.py  compliance_toolset.py  openai_agent.py  pptx_toolset.py
main/agents/agent - xl/: AgentCard.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
main/agents/agent - xl copy/outputs/: Sales_Performance_Q1.xlsx
main/agents/agent - xl copy/src/: __main__.py  excel_toolset.py
main/agents/agent - xl/outputs/: Epstein_Files_Overview.xlsx  IIT_Delhi_Students.xlsx  Student_Data.xlsx  Turtle_Species.xlsx
main/agents/agent - xl/src/: __main__.py  excel_toolset.py  openai_agent.py  openai_agent_executor.py
main/agents/agent-pptx-copy/: Dockerfile  demo.py  demo_new.py  pyproject.toml  req.json  requirements.txt  test_agent.py
main/agents/agent-pptx-copy/src/: openai_agent_executor.py  pptx_toolset.py  pptx_toolset_v3_backup.py
src/: __main__.py
